<resources>
    <string name="app_name">TechCare</string>
    <string name="app_slogan">Simplifica a gestão, acelera a solução!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="sem_conta">Não tem conta?</string>
    <string name="link_registo">Aderir</string>
    <string name="login">Iniciar Sessão</string>
    <string name="registar">Criar Conta</string>
    <string name="hint_confirmar_pass">Confirme a palavra-passe</string>
    <string name="mensagens_default_titulo">Gerir falhas de equipamentos</string>
    <string name="mensagens_default">Registar problemas, monitorar em tempo real e gerar relatórios.</string>
    <string name="btn_registo_avarias">Registo de Avarias</string>
    <string name="btn_monitorizacao_avarias">Monitorização de Avarias</string>
    <string name="btn_notificacoes">Notificações</string>
    <string name="titulo_registo_avaria">Registar nova avaria</string>
    <string name="hint_tipo_equipamento">Tipo de equipamento:</string>
    <string name="hint_localizacao">Localização</string>
    <string name="hint_descricao">Descrição do Problema</string>
    <string name="label_prioridade">Prioridade</string>
    <string name="prioridade_baixa">Baixa</string>
    <string name="prioridade_media">Média</string>
    <string name="prioridade_alta">Alta</string>
    <string name="btn_submeter">Submeter Avaria</string>
    <string name="preview_image">Pré-visualização da imagem</string>
    <string name="titulo_monitorizar_avarias">Monitorizar Avarias</string>
    <string name="hint_monitorizar_avarias">Visualize e filtre todas as avarias registadas</string>
    <string name="hint_barra_pesquisa">Pesquisar Avaria</string>
    <string name="btn_filtrar">Filtrar</string>
    <string name="hint_descricao_avaria">Descrição:</string>
    <string name="hint_estado_avaria">Estado:</string>
    <string name="hint_solicitacao">Solicitação feita</string>
    <string name="hint_comentario">Escreve um comentário…</string>
    <string name="btn_enviar_comentario">Enviar um comentário</string>
    <string name="btn_relatorios">Relatórios</string>
    <string name="btn_editar">Editar</string>
    <string name="hint_editar_estado">Editar Estado da Avaria</string>
    <string name="hint_novo_estado">Novo Estado</string>
    <string name="btn_guardar">Guardar Alterações</string>
    <string name="titulo_relatorios">Relatórios de Avarias</string>
    <string name="sub_titulo_relatorios">Visualize estatísticas e as tendências sobre as avarias</string>
    <string name="hint_datas">Datas</string>
    <string name="hint_total_avarias">Total Avarias: %1$d</string>
    <string name="text_avarias_resolvidas">Resolvidas: %1$d</string>
    <string name="text_tempo_medio">Tempo médio de resolução: %1$s dias</string>
    <string name="text_avarias_tipo_equipamento">Avarias por Tipo de Equipamento: </string>
    <string name="btn_exportar_pdf">Exportar PDF</string>
    <string name="btn_detalhes">Ver detalhes</string>
    <string name="btn_alterar_tecnico">Alterar Técnico</string>
    <string name="titulo_alterar_tecnico">Alterar Técnico</string>
    <string name="sub_titulo_alterar_tecnico">Selecione um técnico disponível</string>
    <string name="btn_registar_tecnico">Registar Técnico</string>
    <string name="btn_selecionar">Selecionar</string>
    <string name="titulo_registar_tecnico">Registar Técnico</string>
    <string name="hint_nome">Nome</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_user">Utilizador</string>
    <string name="logo">Logo da aplicação TechCare</string>
    <string name="notificacoes_titulo">Notificações</string>
    <string name="notificacoes_subtitulo">Veja as atualizações das avarias</string>
    <string name="hint_resolucao">Resolução:</string>
    <string name="hint_alterar_tecnico">Alterar Técnico</string>
    <string name="hint_alterar_estado">Alterar Estado</string>
    <string name="btn_adicionar_foto">Adicionar Foto</string>
    <string name="hint_inserir_datas">Insira as datas</string>
    <string name="hint_inserir_tipo_equipamento">Insira o tipo de equipamento</string>
    <string name="hint_inserir_localizacao">Insira a localização</string>
    <string name="text_filtrar_estado">Filtrar por Estado:</string>
    <string name="text_filtrar_prioridade">Filtrar por Prioridade:</string>
    <string name="hint_sem_resultados">Sem resultados</string>
    <string name="btn_terminar_sessao">Terminar sessão</string>
    <string name="btn_asinalar_resolvida">Assinalar avaria como resolvida</string>
    <string name="text_sem_grau_urgencia">Sem grau de urgência</string>
    <string name="text_filtrar_avarias">Filtrar Avarias</string>
    <string name="btn_aplicar">Aplicar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="hint_inserir_resolucao">Insira a resolução</string>
    <string name="text_registar_novo_tecnico">Registar Novo Técnico</string>
    <string name="btn_criar">Criar</string>
    <string name="toast_avaria_criada">Avaria registada com sucesso</string>
    <string name="toast_preencha_campos">Preencha todos os campos obrigatórios</string>
    <string name="toast_match_passwords">As palavras-passe não coincidem</string>
    <string name="toast_nenhuma_notificacao">Nenhuma notificação encontrada</string>
    <string name="toast_funcionalidade_nao_implementada">Funcionalidade não implementada</string>
    <string name="toast_filtro">Por favor, preencha pelo menos um filtro para aplicar.</string>
    <string name="toast_erro_carregar_imagem">Erro ao carregar imagem</string>
    <string name="erro_registar_avaria">Erro ao registar avaria: %1$d</string>
    <string name="erro_email_registado">Email já registado</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="toast_erro_resolucao">A resolução não pode estar vazia</string>
    <string name="toast_avaria_resolvida">Avaria assinalada como resolvida!</string>
    <string name="toast_erro_avaria_resolvida">Erro ao assinalar avaria como resolvida</string>

</resources>